syntax = "proto3";

package com.runicrealms.velagones.service;

option java_outer_classname = "Velagones";
option java_multiple_files = true;

// A request from proxy -> server to request discovery
message DiscoverRequest {
  string server_name = 1;
}

message DiscoverResponse {
  bool success = 1;
}

// A request from proxy -> server to request that the server "deactivate" itself
// If immediate = false, this doesn't happen immediately,
// but once all players have left the server, it should call agones.shutdown()
// If immediate = true, the server will immediately kick all players and agones.shutdown()
message DeactivateRequest {
  string server_name = 1;
  bool immediate = 2;
}

message DeactivateResponse {

}

// Service that runs on the paper servers
service VelagonesPaper {
  rpc Discover(DiscoverRequest) returns (DiscoverResponse);
  rpc Deactivate(DeactivateRequest) returns (DeactivateResponse);
}